--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-welcome to the relearningWEB page!
-this is the first learning:
+<!DOCTYPE html>
+<html>
+<head>
+    <title>relearningWEB</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <section>
+        <h3>四个模块</h3>
+        <p>接下来将通过4个模块来重新讲解前端：</p>
+        <ul>
+            <li>javascript</li>
+            <li>CSS & HTML</li>
+            <li>浏览器实践</li>
+            <li>前端综合应用</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        
+    </section>
+</body>
+</html>
